 $Id: ChangeLog,v 1.131.2.25.2.144 2010/12/01 11:47:46 uehira Exp $

2010-12-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.17 released.
	* added substitution functions :
	  src/fileblocks.c, src/memcmp.c, src/malloc.c, src/realloc.c

2010-11-26  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.16 released.
	* src/winlib.c : check system type using AC_CHECK_SIZEOF.
	* configure.in : for cross-compile (Linux)

2010-11-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/evdetect.c : fixed a bug.
	* src/wtape.c : conflict "SIZE_MAX" in Linux (/usr/include/stdint.h).

2010-11-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : check 'statfs()' if 'struct statfs' exists.
	                 for NetBSD (appealed by K. OHTAKE)

2010-11-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.15 released.
	* create header files which can include from other sources.

2010-11-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/daily_rawdiff : added.
	* prog/windiffq : check file size.

2010-11-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* prog/windiffq : added.

2010-11-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.14 released.
	* src/winlib.h : check SHM_R & SHM_W macros. (for Cygwin etc.)

2010-11-03  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.13 released.
	* src/order.c : system clock mode (-a) : fixed a bug.

2010-10-25  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.12 released.
	* configure.in : libwinlog.la : link '-lnsl' and '-lsocket'. (SunOS)
	   : added '--enable-statfs64' option.
	   : FFLAGS : added "-fno-automatic -finit-local-zero" if they work.

2010-10-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/shmcounter.c : added.

2010-10-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : added AM_PROG_CC_C_O
	* compile : again added.

2010-10-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/pmon.c : buffer overflow check (partially).
