@@ -1,4 +1,4 @@
-/* $Id: shmdump.c,v 1.21.4.6.2.16 2010/10/12 13:59:05 uehira Exp $ */
+/* $Id: shmdump.c,v 1.21.4.6.2.17 2010/12/07 04:58:33 uehira Exp $ */
 
 /*  program "shmdump.c" 6/14/94 urabe */
 /*  revised 5/29/96 */
@@ -72,7 +72,7 @@ struct Filter
 };
 
 static const char rcsid[] =
-  "$Id: shmdump.c,v 1.21.4.6.2.16 2010/10/12 13:59:05 uehira Exp $";
+  "$Id: shmdump.c,v 1.21.4.6.2.17 2010/12/07 04:58:33 uehira Exp $";
 
 static char *progname,outfile[256];
 static int win;
@@ -273,6 +273,7 @@ main(int argc, char *argv[])
   static double dbuf[MAX_SR];
   float flt_fl, flt_fh, flt_fp, flt_fs, flt_ap, flt_as;
   int chid;              /* filter var end */
+  void  *q;
 
   if((progname=strrchr(argv[0],'/')) != NULL) progname++;
   else progname=argv[0];
@@ -521,7 +522,7 @@ reset:
         if(sizeof(long)*4+size_in>bufsize_in)
           {
           bufsize_in=sizeof(long)*4+size_in+MAXMESG*100;
-          if((shm_in=(struct Shm *)realloc(shm_in,bufsize_in))==0)
+          if((q=realloc(shm_in,bufsize_in))==NULL)
             {
 #if XINETD
 #else
@@ -529,6 +530,7 @@ reset:
 #endif
             exit(1);
             }
+	  shm_in=(struct Shm *)q;
           }
         if(fread(shm_in->d+4,1,size_in-4,stdin)==0) end=1;
         }
@@ -617,7 +619,7 @@ reset:
             if(ptw-buf+gs>bufsize)
               {
               bufsize=ptw-buf+gs+MAXMESG*100;
-              if((buf=(uint8_w *)realloc(buf,bufsize))==0)
+              if((q=realloc(buf,bufsize))==NULL)
                 {
 #if XINETD
 #else
@@ -625,6 +627,7 @@ reset:
 #endif
                 exit(1);
                 }
+	      buf=(uint8_w *)q;
               }
             if(memcmp(buf+4,tms,6)) /* new time */
               {
