@@ -1,4 +1,4 @@
-/* $Id: wdisk.c,v 1.17.2.8.2.11 2010/10/25 10:31:52 uehira Exp $ */
+/* $Id: wdisk.c,v 1.17.2.8.2.12 2010/12/07 04:58:33 uehira Exp $ */
 /*
   program "wdisk.c"   4/16/93-5/13/93,7/2/93,7/5/94  urabe
                       1/6/95 bug in adj_time fixed (tm[0]--)
@@ -107,7 +107,7 @@
 #define   NAMELEN  1025
 
 static const char rcsid[] =
-  "$Id: wdisk.c,v 1.17.2.8.2.11 2010/10/25 10:31:52 uehira Exp $";
+  "$Id: wdisk.c,v 1.17.2.8.2.12 2010/12/07 04:58:33 uehira Exp $";
 
 char *progname,*logfile;
 int  daemon_mode, syslog_mode, exit_status;
@@ -318,6 +318,7 @@ main(int argc, char *argv[])
    key_t shmkey;
    int c;
    struct Shm  *shm=NULL;
+   void  *q;
    
    if((progname=strrchr(argv[0],'/')) != NULL) progname++;
    else progname=argv[0];
@@ -430,13 +431,17 @@ main(int argc, char *argv[])
      size=mkuint4(buf);
      if(size>bufsiz)
        {
-	 if(size>BUFLIM || (buf=realloc(buf,(size_t)size))==NULL)
-         {
-         sprintf(tbuf,"malloc size=%d",size);
-         write_log(tbuf);
-         end_program();
-         }
-       else bufsiz=size;
+       if(size>BUFLIM || (q=realloc(buf,(size_t)size))==NULL)
+	 {
+	 sprintf(tbuf,"malloc size=%d",size);
+	 write_log(tbuf);
+	 end_program();
+	 }
+       else
+	 {
+	 buf = (uint8_w *)q;
+	 bufsiz=size;
+	 }
        }
      if(fread(buf+4,size-4,1,stdin)<1) end_program();
      }
@@ -524,13 +529,17 @@ main(int argc, char *argv[])
         size=mkuint4(buf);
         if(size>bufsiz)
           {
-          if(size>BUFLIM || (buf=realloc(buf,(size_t)size))==NULL)
+	  if(size>BUFLIM || (q=realloc(buf,(size_t)size))==NULL)
             {
             sprintf(tbuf,"malloc size=%d",size);
 	    write_log(tbuf);
             end_program();
             }
-          else bufsiz=size;
+          else
+	    {
+	    buf = (uint8_w *)q;
+	    bufsiz=size;
+	    }
           }
         if(fread(buf+4,size-4,1,stdin)<1) end_program();
         }
