@@ -1,4 +1,4 @@
-/* $Id: wdiskts.c,v 1.6.2.5.2.11 2010/09/29 06:23:49 uehira Exp $ */
+/* $Id: wdiskts.c,v 1.6.2.5.2.12 2010/12/07 04:58:33 uehira Exp $ */
 
 /*-
   2005.8.10 urabe bug in strcmp2() fixed : 0-6 > 7-9 
@@ -77,7 +77,7 @@
 /* #define FREE(a)         (void)free((void *)(a)) */
 
 static const char rcsid[] =
-  "$Id: wdiskts.c,v 1.6.2.5.2.11 2010/09/29 06:23:49 uehira Exp $";
+  "$Id: wdiskts.c,v 1.6.2.5.2.12 2010/12/07 04:58:33 uehira Exp $";
 
 char *progname,*logfile;
 int  daemon_mode, syslog_mode, exit_status;
@@ -112,6 +112,7 @@ sort_buf()
      size_t point;
      size_t len;
    } **indx;
+   void  *q;
 
    status=0;
    tim_num=(size_t)0;
@@ -132,10 +133,11 @@ sort_buf()
        if(tim_tmp==tim_list[i]) break;
      if(i==tim_num){ /* new time stamp */
        tim_num++;
-       if((tim_list=REALLOC(time_t,tim_list,tim_num))==NULL){
+       if((q=realloc(tim_list, (size_t)(sizeof(time_t)*tim_num)))==NULL){
 	 status=1;
 	 goto end_1;
        }
+       tim_list = (time_t *)q;
        tim_list[i]=tim_tmp;
      }
      /* read & compare channel number */
@@ -145,10 +147,11 @@ sort_buf()
 	 if(ch_tmp==ch_list[i]) break;
        if(i==ch_num){ /* new channel */
 	 ch_num++;
-	 if((ch_list=REALLOC(WIN_ch,ch_list,ch_num))==NULL){
+	 if((q=realloc(ch_list,(size_t)(sizeof(WIN_ch)*ch_num)))==NULL){
 	   status=1;
 	   goto end_1;
 	 }
+	 ch_list = (WIN_ch *)q;
 	 ch_list[i]=ch_tmp;
        }
        ptr+=gsize;
