@@ -1,4 +1,8 @@
- $Id: ChangeLog,v 1.131.2.25.2.144 2010/12/01 11:47:46 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.145 2010/12/07 04:58:32 uehira Exp $
+
+2010-12-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
+	* realloc() memory leak check.
+	* libwinsystem.so : bump revision number.
 
 2010-12-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* Version 2.1.17 released.
